--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
     font-weight: 600;
     border-radius: 10px;
     border: none;
+    background-color: beige;
+    color: white;
 }
 .div{
     display: flex;
