--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     border-radius: 10px;
     border: none;
     background-color: beige;
-    color: white;
+    color: black;
 }
 .div{
     display: flex;
